--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+
+### Rayzr's additions
+.classpath
+*.jardesc
+*.class
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -45,5 +51,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/bin/
 
-.classpath
+*.class
+
+*.class
